# sistema-alfa-montagem

./: .env  .gitignore  db.sqlite3  manage.py  pyproject.toml
comissoes/: models.py
exclude/: main.py  projeto_exportado.txt
montadores/: apps.py  models.py  serializers.py
montagens/: apps.py  models.py  serializers.py  views.py
sistema_alfa_montagem/: asgi.py  settings.py  urls.py  wsgi.py
users/: models.py  permissions.py  serializers.py  test.http  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
utils/: geolocation.py
